[package]
name = "lofter-porter"
version = "0.1.0"
authors = ["JacksonSui <jiashui@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.24"
scraper = "0.11.0"
tokio = { version = "0.2", features = ["full"] }
hyper = "0.13"
hyper-tls = "0.4.0"
